完成试题导入->自动生成模板->自动生成试卷模块

--- a/ea-template/src/main/resources/i18n/en.txt
+++ b/ea-template/src/main/resources/i18n/en.txt
@@ -1,5 +1,5 @@
-submit                 =Submit
-return                 =Return
+submit                 =SUBMIT
+return                 =RETURN
 menu_organize          =Organize
 menu_user              =User Manager
 menu_user_new          =Add User
@@ -12,6 +12,7 @@ menu_item_view         =View Item
 menu_psychological_add =Add Psychological Item
 menu_paper             =Paper Manager
 menu_paper_new         =Add Paper
+menu_paper_byexcel     =Add Paper by Excel
 menu_paper_edit        =Edit Paper
 menu_paper_view        =View Paper
 menu_judge             =Exam Judge
@@ -24,6 +25,7 @@ menu_template_new      =Add Template
 menu_template_edit     =Edit Template
 menu_template_view     =View Template
 title_option_new       =Add Option
+title_mark             =Mark
 title_refkey           =Reference Key
 title_title            =Title
 title_passmark         =Pass Mark
@@ -68,3 +70,5 @@ title_a_count          =A(Count)
 title_b_count          =B(Count)
 title_c_count          =C(Count)
 title_d_count          =D(Count)
+title_candidate        =Choose Candidate
+title_judge            =Choose Judge
