完成套卷的功能

--- a/ea-template/src/main/resources/i18n/en.txt
+++ b/ea-template/src/main/resources/i18n/en.txt
@@ -1,20 +1,24 @@
 submit                 =SUBMIT
 return                 =RETURN
 menu_organize          =Organize
-menu_user              =User Manager
+menu_user              =User Management
 menu_user_new          =Add User
 menu_infocenter        =Info Center
-menu_item              =Item Manager
+menu_item              =Item Management
 menu_item_new          =Add Item
 menu_item_import       =Import Item
 menu_item_edit         =Edit Item
 menu_item_view         =View Item
 menu_psychological_add =Add Psychological Item
-menu_paper             =Paper Manager
+menu_paper             =Paper Management
+menu_papergroup        =Paper Group Management
 menu_paper_new         =Add Paper
+menu_papergroup_new         =Add Paper Group
 menu_paper_byexcel     =Add Paper by Excel
 menu_paper_edit        =Edit Paper
 menu_paper_view        =View Paper
+menu_papergroup_edit   =Edit Paper Group
+menu_papergroup_view   =View Paper Group
 menu_judge             =Exam Judge
 menu_query_exam        =Exam Query
 menu_exam_info         =Exam Info
@@ -66,6 +70,7 @@ title_multi_mark       =Multiple Choice Mark
 title_blank_mark       =Blank Mark
 title_essay_mark       =Essay Mark
 title_score            =Score
+title_count            =Paper Count
 title_a_count          =A(Count)
 title_b_count          =B(Count)
 title_c_count          =C(Count)
@@ -73,3 +78,4 @@ title_d_count          =D(Count)
 title_candidate        =Choose Candidate
 title_judge            =Choose Judge
 title_mark             =Mark
+title_paper            =Paper
