修改BusinessWithProcessModel类里面的taskname和assigntime为逗号分隔形势。 同时进一步完善套卷方法，并修复bug。

--- a/ea-template/src/main/resources/i18n/en.txt
+++ b/ea-template/src/main/resources/i18n/en.txt
@@ -35,6 +35,7 @@ title_title            =Title
 title_passmark         =Pass Mark
 title_totalmark        =Total Mark
 title_examtime         =Exam Time
+title_status           =Exam Status
 title_operation        =Operation
 title_type             =Type
 title_result           =Result
