完成在线编辑多国语言配置文件功能

--- a/ea-template/src/main/resources/i18n/en.txt
+++ b/ea-template/src/main/resources/i18n/en.txt
@@ -1,5 +1,5 @@
 submit                 =SUBMIT
-return                 =RETURN
+return                 =RETURN11111
 menu_organize          =Organize
 menu_user              =User Management
 menu_user_new          =Add User
