增加考试系统的用户体验

--- a/ea-template/src/main/resources/i18n/en.txt
+++ b/ea-template/src/main/resources/i18n/en.txt
@@ -12,7 +12,8 @@ menu_item_view         =View Item
 menu_psychological_add =Add Psychological Item
 menu_paper             =Paper Management
 menu_papergroup        =Paper Group Management
-menu_paper_new         =Add Paper
+menu_paper_new         =Add Paper(by template)
+menu_paper_new_excel         =Add Paper(by excel)
 menu_papergroup_new         =Add Paper Group
 menu_paper_byexcel     =Add Paper by Excel
 menu_paper_edit        =Edit Paper
@@ -81,3 +82,5 @@ title_candidate        =Choose Candidate
 title_judge            =Choose Judge
 title_mark             =Mark
 title_paper            =Paper
+title_generate_paper   =Generate Paper
+title_time             =Date
