--- a/ea-template/src/main/resources/i18n/zh-cn.txt
+++ b/ea-template/src/main/resources/i18n/zh-cn.txt
@@ -1,4 +1,5 @@
 submit                 =提交
+return                 =返回
 menu_oragnize          =组织架构
 menu_user              =用户管理
 menu_user_new          =新增用户
@@ -12,7 +13,8 @@ menu_item_view         =查看试题
 menu_psychological_add =Add Psychological Item
 menu_paper             =试卷管理
 menu_papergroup        =试卷组管理
-menu_paper_new         =新增试卷
+menu_paper_new         =新增试卷(由模板)
+menu_paper_new_excel         =新增试卷(由表格)
 menu_papergroup_new         =新增试卷组
 menu_paper_byexcel     =通过Excel生成试卷
 menu_paper_edit        =编辑试卷
@@ -79,3 +81,5 @@ title_d_count          =D(Count)
 title_candidate        =选择考试人员
 title_judge            =选择判卷者
 title_paper            =试卷
+title_generate_paper   =由该模板生成试卷
+title_time             =考试日期
