--- a/ea-template/src/main/resources/i18n/zh-cn.txt
+++ b/ea-template/src/main/resources/i18n/zh-cn.txt
@@ -12,9 +12,9 @@ menu_item_edit         =编辑试题
 menu_item_view         =查看试题
 menu_psychological_add =Add Psychological Item
 menu_paper             =试卷管理
-menu_papergroup        =试卷组管理
-menu_paper_new         =新增试卷(由模板)
-menu_paper_new_excel         =新增试卷(由表格)
+menu_papergroup        =套题管理
+menu_paper_new         =新增试卷
+menu_paper_new_excel         =新增试卷(由Excel导入)
 menu_papergroup_new         =新增试卷组
 menu_paper_byexcel     =通过Excel生成试卷
 menu_paper_edit        =编辑试卷
