继续完善用户体验。

--- a/ea-template/src/main/resources/i18n/en.txt
+++ b/ea-template/src/main/resources/i18n/en.txt
@@ -84,3 +84,8 @@ title_mark             =Mark
 title_paper            =Paper
 title_generate_paper   =Generate Paper
 title_time             =Date
+title_exam_list        =Exam Information List
+title_history_list     =Exam History List
+title_item             =Item List
+title_paper            =Paper List
+title_exam_result      =Score
