去掉template对象，把里面的属性和paper进行整合，同时在新建试卷和编辑的同时，能够同时添加分数和题目数，并且在页面能显示总分。

--- a/ea-template/src/main/resources/i18n/en.txt
+++ b/ea-template/src/main/resources/i18n/en.txt
@@ -89,3 +89,8 @@ title_history_list     =Exam History List
 title_item             =Item List
 title_paper            =Paper List
 title_exam_result      =Score
+title_search           =Query Panel
+title_item_management  =Item Management
+title_papergroup       =Paper Group List
+title_judge            =Judge
+title_user             =User
