--- a/ea-template/src/main/resources/i18n/zh-cn.txt
+++ b/ea-template/src/main/resources/i18n/zh-cn.txt
@@ -88,3 +88,8 @@ title_history_list     =考试结果
 title_item             =试题
 title_paper            =试卷
 title_exam_result      =成绩
+title_search           =查询
+title_item_management  =修改试题
+title_papergroup       =套题列表
+title_judge            =判卷
+title_user             =用户
