--- a/ea-template/src/main/resources/i18n/jp.txt
+++ b/ea-template/src/main/resources/i18n/jp.txt
@@ -1,4 +1,98 @@
-submit                 =決定する 
-menu_organize          =組織 
+﻿return                 =リターン
+submit                 =提出する
+menu_organize          =整理する
 menu_user              =ユーザー管理
-menu_infocenter        =情報の流布
+menu_user_new          =ユーザーを追加
+menu_infocenter        =情報センター
+menu_item              =項目管理                      
+menu_item_new          =アイテムの追加                
+menu_item_import       =輸入品目                      
+menu_item_edit         =編集項目                      
+menu_item_view         =ソ                            
+menu_psychological_add =心理的項目の追加              
+menu_paper             =書類管理                      
+menu_papergroup        =日本製紙グループ経営          
+menu_paper_new         =紙を追加                      
+menu_item_new_excel    =（ Excelで）APPアイテム       
+menu_paper_new_excel   =（ Excelで）紙を追加          
+menu_papergroup_new    =日本製紙グループの追加        
+menu_paper_byexcel     =Excelで用紙を追加             
+menu_paper_edit        =編集紙                        
+menu_paper_view        =ビュー·ペーパー              
+menu_papergroup_edit   =編集日本製紙グループ          
+menu_papergroup_view   =ビュー日本製紙グループ        
+menu_judge             =試験の裁判官                  
+menu_query_exam        =試験のクエリ                  
+menu_exam_info         =試験の情報                    
+menu_knowledge         =ナレッジマネジメント          
+menu_knowledge_new     =知識を追加する                
+menu_template          =テンプレート管理              
+menu_template_new      =テンプレートを追加            
+menu_template_edit     =編集テンプレート              
+menu_template_view     =ビューテンプレート            
+menu_edit_para         =編集システム·パラメータ      
+title_option_new       =オプションを追加              
+title_mark             =マーク                        
+title_refkey           =参照キー                      
+title_title            =タイトル                      
+title_passmark         =マークを渡す                  
+title_totalmark        =合計マーク                    
+title_examtime         =試験時間                      
+title_status           =試験の状況                    
+title_operation        =操作                          
+title_type             =タイプ                        
+title_result           =結果                          
+title_single    	     =単一選択                      
+title_multi            =複数の選択肢                  
+title_blank            =空白                          
+title_essay            =エッセイ                      
+title_remark           =発言                          
+title_createtime       =時間を作成します。            
+title_starttime        =開始時間                      
+title_content          =コンテンツ                    
+title_name             =名前                          
+title_alias            =エイリアス                    
+title_knowledge        =知識                          
+title_template         =テンプレート                  
+title_result           =結果                          
+title_single_rmd       =単一選択（ランダム·カウント）nt)
+title_multi_rmd        =多肢選択（ランダム·カウント）ount)
+title_blank_rmd        =空白（ランダム·カウント）    
+title_essay_rmd        =エッセイ（ランダム·カウント）
+title_single_req       =単一選択（必須）              
+title_multi_req        =多肢選択（必須）              
+title_blank_req        =空白（必須）                  
+title_essay_req        =エッセイ（必須）              
+title_select_item      =アイテムを選択します。        
+title_select_template  =テンプレートを選択            
+title_edit             =編集                          
+title_view             =ビュー                        
+title_delete           =削除                          
+title_req              =必須項目（カウント）          
+title_rmd              =ランダムアイテム（カウント）  
+title_single_mark      =単一選択マーク                
+title_multi_mark       =多肢選択マーク                
+title_blank_mark       =空白のマーク                  
+title_essay_mark       =エッセイマーク                
+title_score            =スコア                        
+title_count            =紙のカウント                  
+title_a_count          =（カウント）                  
+title_b_count          =B （ COUNT）                  
+title_c_count          =C （カウント）                
+title_d_count          =D （ COUNT）                  
+title_candidate        =候補を選択してください        
+title_judge            =裁判官を選択してください      
+title_mark             =マーク                        
+title_paper            =紙                            
+title_generate_paper   =紙を生成                      
+title_time             =日付                          
+title_exam_list        =試験の情報リスト              
+title_history_list     =受験履歴リスト                
+title_item             =アイテム一覧                  
+title_paper            =用紙リスト                    
+title_exam_result      =スコア                        
+title_search           =クエリーパネル                
+title_item_management  =項目管理                      
+title_papergroup       =日本製紙グループ一覧          
+title_judge            =裁判官                        
+title_user             =ユーザー                      
