完成按照考试记录查看和导出结果

--- a/ea-template/src/main/resources/i18n/en.txt
+++ b/ea-template/src/main/resources/i18n/en.txt
@@ -31,6 +31,7 @@ menu_template_new      =Add Template
 menu_template_edit     =Edit Template
 menu_template_view     =View Template
 menu_edit_para         =Edit System Parameter
+menu_exam_arrange      =Exam Arrangement Query
 title_option_new       =Add Option
 title_mark             =Mark
 title_refkey           =Reference Key
@@ -96,3 +97,4 @@ title_item_management  =Item Management
 title_papergroup       =Paper Group List
 title_judge            =Judge
 title_user             =User
+title_join_user        =Joined User
